# leafling

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  config.toml  gruvbox.toml
.github/workflows/: ci-check.yml  contrib-refresh.yml  release-build.yml  release-cut.yml
demo/: README.md  README_FR.md
demo/sources/: demo-mermaid-render.md
npm/: package.json
npm/scripts/: publish.sh
scripts/: install.ps1  install.sh  release-cut.sh
src/: app.rs  cli.rs  config.rs  editor.rs  main.rs  markdown.rs  render.rs  runtime.rs  terminal.rs  tests.rs  theme.rs  update.rs
src/app/: content.rs  file_picker.rs  flash.rs  io_picker.rs  mod.rs  popups.rs  search.rs  theme_picker.rs  translation.rs
src/markdown/: blocks.rs  lists.rs  mod.rs  syntax.rs  table_layout.rs  tables.rs  width.rs  wrapping.rs
src/render/: content.rs  mod.rs  modal.rs  popup.rs  popup_picker.rs  status.rs
src/runtime/: keyboard.rs  mod.rs  mouse.rs
src/tests/: app.rs  config.rs  editor.rs  file_picker.rs  markdown.rs  markdown_blocks.rs  markdown_embedded.rs  markdown_links.rs  markdown_lists.rs  markdown_tables.rs  mod.rs  render.rs  theme.rs
src/theme/: mod.rs  presets.rs  serde.rs
src/translation/: mod.rs  provider.rs  render.rs  segment.rs
