[package]
name = "leaf"
version = "1.7.0"
edition = "2021"
description = "A friendly terminal Markdown previewer"
license = "MIT"

[[bin]]
name = "leaf"
path = "src/main.rs"

[dependencies]
ratatui       = "0.29"
crossterm     = "0.28"
pulldown-cmark = "0.12"
syntect       = "5.2"
anyhow        = "1.0"
unicode-width = "0.1"
reqwest       = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde         = { version = "1.0", features = ["derive"] }
semver        = "1.0"
sha2          = "0.10"
